test_suite/alan-2022-examples/failing/004660_mutation.alan
source qq40a begin leave H() leave end
